feat: httpOnly cookies
